--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
     <title>Secure V2 - {{ .Title }}</title>
 
-    <link href="/css/dist/secureV2.css" rel="stylesheet" type="text/css">
+    <link href="/css/dist/gophish.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:700,500' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,700' rel='stylesheet' type='text/css'>
     <script>
